# libcore

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  default.cmake  settings.gradle.kts
.github/workflows/: android.yaml  cmake-build.yml
android/: .gitignore  README.md  gradlew  settings.gradle.kts
android/examples/app/: build.gradle.kts
android/examples/app/src/main/: AndroidManifest.xml
android/examples/app/src/main/kotlin/com/example/libexample/: MainActivity.kt
android/examples/app/src/main/res/values/: strings.xml
android/gradle/: libs.versions.toml
android/lib/: build.gradle  build.gradle.kts
android/lib/src/androidTest/kotlin/com/example/lib/extensions/: ViewExtTest.kt
android/lib/src/androidTest/kotlin/com/example/lib/ui/: CustomTextViewTest.kt
android/lib/src/main/kotlin/com/example/lib/base/: SimpleLogger.kt
android/lib/src/main/kotlin/com/example/lib/extensions/: StringExt.kt  ViewExt.kt
cmake/: AddBoostTests.cmake  CMakeLists.txt  default.cmake
cmake/cmake/: AddBoostTests.cmake  ReturnIf.cmake
cmake/cmake/find/: FindOSMesa.cmake
cmake/core/: CMakeLists.txt
cmake/core/euler_project/: CMakeLists.txt  main.cpp  problem_26.cpp  problem_26.h  problem_27.cpp  problem_27.h  problem_28.cpp  problem_28.h  problem_29.cpp  problem_29.h  solution_base.h
cmake/core/filters/: CMakeLists.txt  soundex.cpp  soundex.h
cmake/core/leetcode_solutions/: CMakeLists.txt  array_differences.cpp  array_differences.h  linked_list_number_sums.cpp  linked_list_number_sums.h  max_average_subarray.cpp  max_average_subarray.h  max_consecutive_ones.cpp  max_consecutive_ones.h  max_number_of_viwels.cpp  max_number_of_viwels.h  merge_strings_alternately.cpp  merge_strings_alternately.h  reverse_string.cpp  reverse_string.h  strings_gcd.cpp  strings_gcd.h  two_arrays_median.cpp  two_arrays_median.h  two_sum_calculator.cpp  two_sum_calculator.h
cmake/core/math/: CMakeLists.txt  TwoSumCalculator.cpp  TwoSumCalculator.h  factorization.hpp  gcd.hpp  logarithms.hpp  math.h
cmake/core/math/tests/: CMakeLists.txt  test_math.cpp
cmake/core/tests/: CMakeLists.txt  test_array_differences.cpp  test_euler_problem_29.cpp  test_factorization.cpp  test_linked_list_numbers_sum.cpp  test_main.cpp  test_math.cpp  test_max_average_subarray.cpp  test_max_number_of_vowels.cpp  test_merge_alternately.cpp  test_merged_array_median.cpp  test_problem_27.cpp  test_problem_28.cpp  test_ranges_v3.cpp  test_recurrence_size.cpp  test_reverse_string.cpp  test_ring_buffer.cpp  test_soundex.cpp  test_string_gcd.cpp  test_two_sum_calculator.cpp  utils.h
cmake/core/utils/: StrongTypedef.h  ring_buffer.h
cmake/katas/: CMakeLists.txt
cmake/katas/binary-search-kata/: binary_search.cpp  binary_search.h
cmake/katas/tests/: CMakeLists.txt  test_kata_binary_search.cpp  test_main.cpp
cmake/rendering/opengl/: CMakeLists.txt
cmake/rendering/opengl/apps/: CMakeLists.txt  game_of_life.cpp  test1.cpp
cmake/rendering/opengl/apps/GameOfLifeAssets/: generation.comp
cmake/rendering/opengl/apps/test2/: frag.glsl  vert.glsl
cmake/rendering/opengl/core/: CMakeLists.txt
cmake/rendering/opengl/core/buffers/: BufferObject.h  BufferObjectBase.cpp  BufferObjectBase.h  SharedStorageBuffer.cpp  SharedStorageBuffer.h
cmake/rendering/opengl/core/evaluators/: ComputeEvaluator.cpp  ComputeEvaluator.h
cmake/rendering/opengl/core/programs/: Program.h  Shader.cpp  Shader.h
cmake/rendering/opengl/glad/glad/: CMakeLists.txt  glad.c
cmake/rendering/opengl/tests/: CMakeLists.txt  GLMesaTestFixture.h  test_arraybuffertests.cpp  test_buffer_objects.cpp  test_compute_shader.cpp
cmake/rendering/opengl/ui/ui/: Glfw.h  Ui.h
cmake/solutions/: CMakeLists.txt
cmake/solutions/game-of-life/: CMakeLists.txt
cmake/solutions/game-of-life/src/: GameOfLife.cpp  GameOfLife.h
cmake/solutions/game-of-life/tests/: CMakeLists.txt
core/: CMakeLists.txt
core/math/: CMakeLists.txt  gcd.hpp  gcd.xpp  logarithms.hpp  math.h
core/math/tests/: CMakeLists.txt  test_math.cpp
examples/app/: build.gradle.kts
gradle/: libs.versions.toml
lib/: build.gradle.kts
rendering/opengl/: CMakeLists.txt
rendering/opengl/apps/: CMakeLists.txt  simple_uniform_test.cpp  test1.cpp  test2.cpp
rendering/opengl/apps/simple_uniform_test/: frag.glsl  frag_diff.glsl  vert.glsl  vert_diff.glsl
rendering/opengl/apps/test2/: frag.glsl  vert.glsl
rendering/opengl/core/: CMakeLists.txt  Program.h  Shader.cpp  Shader.h
rendering/opengl/core/buffers/: TexturedVertexArrayBuffer.cpp  TexturedVertexArrayBuffer.h  VertexArrayBuffer.cpp  VertexArrayBuffer.h
rendering/opengl/core/programs/: Program.cpp  Program.h
rendering/opengl/core/utils/: Errors.cpp  Errors.h
rendering/opengl/glad/glad/: glad.h
rendering/opengl/tests/: CMakeLists.txt  GLMesaTestFixture.h  main.cpp  test_arraybuffertests.cpp  test_program.cpp  tst_shader.cpp
rendering/opengl/tests/shaders/: frag.glsl
rendering/opengl/ui/ui/: CMakeLists.txt  Glfw.cpp  Glfw.h  Ui.h
rendering/utils/: CMakeLists.txt
rendering/utils/utils/: Camera.cpp  Camera.h
(+6 files in other folders)
